# mcp-hospital-backend_Calcagno

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
app/: agent.py  evaluator.py  main.py  mcp_client.py  normalizer.py  pipeline.py  schemas.py
data/: departments.json  patients.json
tests/: test_evaluator.py  test_normalizer.py  test_schemas.py
